Web service e htlm updates

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
+<html lang="pt-pt" xmlns:mailto="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -58,7 +58,6 @@
             <ul>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#portofolio">Portofólio</a></li>
-                <li><a href="#produtos">Produtos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
@@ -97,32 +96,16 @@
         </ul>
     </section>
 
-    <section id="produtos">
-        <h1>Produtos</h1>
-
-        <ul class="tree">
-            <li>
-                <span wm-folder>Jogos</span>
-                <ul style="display: none;">
-                    <li><a href="../GAMES/TETRIS/TetrisGameSinglePlayer/Index.html" target="_blank">Tetris</a></li>
-                    <li><a href="../GAMES/Football/index.html" target="_blank">Football</a></li>
-                    <li><a href="../GAMES/Galo/galo.html" target="_blank">Galo</a></li>
-                    <li><a href="../GAMES/Labirinto/index.html" target="_blank">Labirinto</a></li>
-                    <li><a href="../GAMES/Nave/ProtectThePlanet/ProtectThePlanet.html" target="_blank">Nave</a></li>
-                    <li><a href="../GAMES/Ping Pong/Game.html" target="_blank">Ping-Pong</a></li>
-                    <li><a href="../GAMES/RPG/Index.html" target="_blank">Rpg</a></li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
     <section id="contacto">
         <h1>Contacto</h1>
-        <p>ruidanielgil@gmail.com</p>
-        <a href="ruidanielgil@gmail.com" target="blank">ruidanielgil@gmail.com</a> | <a
-            href="https://www.facebook.com/piresgildaniel" target="blank">Facebook</a> | <a
-            href="https://www.github.com/piresgil" target="blank">GitHub</a>| <a
-            href="https://www.linkedin.com/in/rui-daniel-pires-gil" target="blank">Linkedin</a></p>
+        <p>Rui Daniel Pires Gil</p>
+        <p>Java Developer in training | Personal projects with JavaFX & Spring Boot | Open to internships and development opportunities</p>
+        <p>
+            <a href= "mailto:ruidanielgil@gmail.com" target="blank">Email</a> |
+            <a href="https://www.github.com/piresgil" target="blank">GitHub</a> |
+            <a href="https://www.linkedin.com/in/rui-daniel-pires-gil" target="blank">Linkedin</a> |
+            <a href="https://www.facebook.com/piresgildaniel" target="blank">Facebook</a>
+        </p>
     </section>
 
 </main>
