web sercive e ajustes de css e html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -56,8 +56,9 @@
 
         <nav class="nav-bar max-nav">
             <ul>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#portofolio">Index</a></li>
                 <li><a href="#portofolio">Portofólio</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
@@ -66,14 +67,19 @@
 </header>
 <section class="ghost"></section>
 <main>
-    <section id="sobre">
-        <h1>Sobre</h1>
 
-
+    <section id="index">
+        <h1>Index</h1>
     </section>
 
     <section id="portofolio">
         <h1>Portolólio</h1>
+        <p>Currently, I am working on several Java-based personal projects, including:</p>
+        <p>A Car Rental Management System built with JavaFX and Spring Boot.</p>
+        <p>A Custom Antivirus Application integrating file scanning, hash validation, and external APIs</p>
+        <p>A growing suite of tools applying REST APIs, OOP principles, and clean architecture practices.</p>
+        <p>To expand my versatility, I am also exploring front-end web technologies (HTML5, CSS3, JavaScript) and
+            Arduino-based hardware programming.</p>
         <ul class="tree">
             <li>
                 <span wm-folder>Java</span>
@@ -92,16 +98,37 @@
                 </ul>
             </li>
         </ul>
-        </li>
-        </ul>
+    </section>
+
+
+    <section id="sobre">
+        <h1>Sobre</h1>
+
+        <p id="descricao-sobre">
+        <p>I am a dedicated Java developer with a strong focus on building robust, scalable, and user-friendly desktop
+            applications. My main expertise lies in Java and its modern ecosystem — including JavaFX for UI development,
+            Spring Boot for backend architecture, and JUnit for automated testing.</p>
+        <p>I hold a European Level 3 certification in Computer Management from the Professional School of Raia,
+            Idanha-a-Nova, Portugal. My formal education provided a solid foundation in business management and
+            programming with languages such as Pascal, Clipper, Visual Basic, and MySQL — along with basic Java. During
+            that time, I developed a strong interest in software development by creating a data management system using
+            Visual Basic as part of a school project.</p>
+        <p>Although I initially pursued other fields due to the lack of early opportunities in tech (2007), my passion
+            for software development never faded. Since 2018, I have fully reengaged in the world of programming, taking
+            a self-taught and project-driven approach — with a clear focus on mastering the Java ecosystem.</p>
+        <p>I’m actively seeking opportunities that allow me to grow as a Java developer and collaborate on meaningful,
+            technically challenging projects.</p>
+
+
     </section>
 
     <section id="contacto">
         <h1>Contacto</h1>
         <p>Rui Daniel Pires Gil</p>
-        <p>Java Developer in training | Personal projects with JavaFX & Spring Boot | Open to internships and development opportunities</p>
+        <p id="descricao-contacto">Java Developer in training | Personal projects with JavaFX & Spring Boot | Open to
+            internships and development opportunities</p>
         <p>
-            <a href= "mailto:ruidanielgil@gmail.com" target="blank">Email</a> |
+            <a href="mailto:ruidanielgil@gmail.com" target="blank">Email</a> |
             <a href="https://www.github.com/piresgil" target="blank">GitHub</a> |
             <a href="https://www.linkedin.com/in/rui-daniel-pires-gil" target="blank">Linkedin</a> |
             <a href="https://www.facebook.com/piresgildaniel" target="blank">Facebook</a>
