Atualização html css

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -56,7 +56,7 @@
 
         <nav class="nav-bar max-nav">
             <ul>
-                <li><a href="#portofolio">Index</a></li>
+                <li><a href="#index">Index</a></li>
                 <li><a href="#portofolio">Portofólio</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#contacto">Contacto</a></li>
@@ -74,12 +74,14 @@
 
     <section id="portofolio">
         <h1>Portolólio</h1>
-        <p>Currently, I am working on several Java-based personal projects, including:</p>
-        <p>A Car Rental Management System built with JavaFX and Spring Boot.</p>
-        <p>A Custom Antivirus Application integrating file scanning, hash validation, and external APIs</p>
-        <p>A growing suite of tools applying REST APIs, OOP principles, and clean architecture practices.</p>
-        <p>To expand my versatility, I am also exploring front-end web technologies (HTML5, CSS3, JavaScript) and
-            Arduino-based hardware programming.</p>
+        <div id=descricao-portofolio>
+            <p>Currently, I am working on several Java-based personal projects, including:</p>
+            <p>A Car Rental Management System built with JavaFX and Spring Boot.
+                A Custom Antivirus Application integrating file scanning, hash validation, and external APIs
+                A growing suite of tools applying REST APIs, OOP principles, and clean architecture practices.
+                To expand my versatility, I am also exploring front-end web technologies (HTML5, CSS3, JavaScript) and
+                Arduino-based hardware programming.</p>
+        </div>
         <ul class="tree">
             <li>
                 <span wm-folder>Java</span>
