Atualização html css

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="_styles/style.css">
+    <link rel="stylesheet" href="_styles/logo.css">
+    <link rel="stylesheet" href="_styles/hedears.css">
     <link rel="stylesheet" href="_styles/tree.css">
+    <link rel="stylesheet" href="_styles/section.css">
+    <link rel="stylesheet" href="_styles/footer.css">
 
     <title>Daniel Gil</title>
 </head>
@@ -57,6 +61,7 @@
         <nav class="nav-bar max-nav">
             <ul>
                 <li><a href="#index">Index</a></li>
+                <li><a href="#db">Base Dados</a></li>
                 <li><a href="#portofolio">Portofólio</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#contacto">Contacto</a></li>
@@ -68,8 +73,14 @@
 <section class="ghost"></section>
 <main>
 
+
     <section id="index">
         <h1>Index</h1>
+    </section>
+
+
+    <section id="db">
+        <h1>Base de Dados</h1>
     </section>
 
     <section id="portofolio">
@@ -123,14 +134,12 @@
 
 
     </section>
-
     <section id="contacto">
         <h1>Contacto</h1>
-        <p>Rui Daniel Pires Gil</p>
+        <p>ruidanielgil@gmail.coml</p>
         <p id="descricao-contacto">Java Developer in training | Personal projects with JavaFX & Spring Boot | Open to
             internships and development opportunities</p>
         <p>
-            <a href="mailto:ruidanielgil@gmail.com" target="blank">Email</a> |
             <a href="https://www.github.com/piresgil" target="blank">GitHub</a> |
             <a href="https://www.linkedin.com/in/rui-daniel-pires-gil" target="blank">Linkedin</a> |
             <a href="https://www.facebook.com/piresgildaniel" target="blank">Facebook</a>
