Atualização html css

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -86,8 +86,8 @@
     <section id="portofolio">
         <h1>Portolólio</h1>
         <div id=descricao-portofolio>
-            <p>Currently, I am working on several Java-based personal projects, including:</p>
-            <p>A Car Rental Management System built with JavaFX and Spring Boot.
+            <p>Currently, I am working on several Java-based personal projects, including:<br>
+                <br> A Car Rental Management System built with JavaFX and Spring Boot.
                 A Custom Antivirus Application integrating file scanning, hash validation, and external APIs
                 A growing suite of tools applying REST APIs, OOP principles, and clean architecture practices.
                 To expand my versatility, I am also exploring front-end web technologies (HTML5, CSS3, JavaScript) and
@@ -95,7 +95,7 @@
         </div>
         <ul class="tree">
             <li>
-                <span wm-folder>Java</span>
+                <span wm-folder><h1>Java</h1></span>
                 <ul style="display: none;">
                     <li><a href="https://github.com/piresgil/DAO-JDBC.git" target="_blank">DAO-JDBC</a></li>
                     <li><a href="https://github.com/piresgil/JPA-Hibernate-Maven-Xampp.git" target="_blank">JPA-Hibernate-Maven-Xampp</a>
@@ -105,7 +105,7 @@
                 </ul>
             </li>
             <li>
-                <span wm-folder>Arduinob</span>
+                <span wm-folder><h1>Arduino</h1></span>
                 <ul style="display: none;">
                     <li><a href="https://github.com/piresgil/Arduino-Wii-Nunchuk.git" target="_blank">Arduino-Wii-Nunchuk</a>
                 </ul>
@@ -120,25 +120,27 @@
         <p id="descricao-sobre">
         <p>I am a dedicated Java developer with a strong focus on building robust, scalable, and user-friendly desktop
             applications. My main expertise lies in Java and its modern ecosystem — including JavaFX for UI development,
-            Spring Boot for backend architecture, and JUnit for automated testing.</p>
-        <p>I hold a European Level 3 certification in Computer Management from the Professional School of Raia,
+            Spring Boot for backend architecture, and JUnit for automated testing.<br>
+            <br> I hold a European Level 3 certification in Computer Management from the Professional School of Raia,
             Idanha-a-Nova, Portugal. My formal education provided a solid foundation in business management and
             programming with languages such as Pascal, Clipper, Visual Basic, and MySQL — along with basic Java. During
             that time, I developed a strong interest in software development by creating a data management system using
-            Visual Basic as part of a school project.</p>
-        <p>Although I initially pursued other fields due to the lack of early opportunities in tech (2007), my passion
+            Visual Basic as part of a school project.<br>
+            <br> Although I initially pursued other fields due to the lack of early opportunities in tech (2007), my
+            passion
             for software development never faded. Since 2018, I have fully reengaged in the world of programming, taking
-            a self-taught and project-driven approach — with a clear focus on mastering the Java ecosystem.</p>
-        <p>I’m actively seeking opportunities that allow me to grow as a Java developer and collaborate on meaningful,
+            a self-taught and project-driven approach — with a clear focus on mastering the Java ecosystem.<br>
+            <br> I’m actively seeking opportunities that allow me to grow as a Java developer and collaborate on
+            meaningful,
             technically challenging projects.</p>
 
 
     </section>
     <section id="contacto">
         <h1>Contacto</h1>
-        <p>ruidanielgil@gmail.coml</p>
+        <p>ruidanielgil@gmail.com</p><br>
         <p id="descricao-contacto">Java Developer in training | Personal projects with JavaFX & Spring Boot | Open to
-            internships and development opportunities</p>
+            internships and development opportunities</p><br>
         <p>
             <a href="https://www.github.com/piresgil" target="blank">GitHub</a> |
             <a href="https://www.linkedin.com/in/rui-daniel-pires-gil" target="blank">Linkedin</a> |
@@ -148,7 +150,7 @@
 
 </main>
 <footer id="rodape">
-    <br>Copyright&copy; 2019 - by Daniel Gil</br>
+    <a>Copyright&copy; 2019 - by Daniel Gil</a>
 
 </footer>
 
