Tentativa de povoamento da db

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -81,6 +81,15 @@
 
     <section id="db">
         <h1>Base de Dados</h1>
+        <ul>
+            <li><a href="db/users.html">Users</a></li>
+            <li><a href="#db">Product</a></li>
+            <li><a href="#portofolio">Order</a></li>
+            <li><a href="#sobre">Category</a></li>
+            <li><a href="#sobre">Payment</a></li>
+            <li><a href="#contacto">Product Category</a></li>
+            <li><a href="#contacto">Order Item</a></li>
+        </ul>
     </section>
 
     <section id="portofolio">
