Povoamento da db tb_users a ser mostrada no html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -109,7 +109,7 @@
                     <li><a href="https://github.com/piresgil/DAO-JDBC.git" target="_blank">DAO-JDBC</a></li>
                     <li><a href="https://github.com/piresgil/JPA-Hibernate-Maven-Xampp.git" target="_blank">JPA-Hibernate-Maven-Xampp</a>
                     </li>
-                    <li><a href="https://github.com/piresgil/System-Jogo-Xadrez.git" target="_blank">System-Jogo-XadrezSystem-Jogo-Xadrez</a>
+                    <li><a href="https://github.com/piresgil/System-Jogo-Xadrez.git" target="_blank">Jogo-Xadrez</a>
                     </li>
                 </ul>
             </li>
