--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -93,7 +93,7 @@
     </section>
 
     <section id="portofolio">
-        <h1>Portolólio</h1>
+        <h1>Portofólio</h1>
         <div id=descricao-portofolio>
             <p>Currently, I am working on several Java-based personal projects, including:<br>
                 <br> A Car Rental Management System built with JavaFX and Spring Boot.
