Criação de alguns html que  mostram a DB, estilos e scripts js

--- a/src/main/resources/static/db/payment.html
+++ b/src/main/resources/static/db/payment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Utilizadores</title>
+    <title>Lista de Categorias (Exemplo JSON)</title>
     <style>
         /* Estilos básicos para o exemplo */
         body {
@@ -54,10 +54,10 @@
     <nav>
         <ul>
             <li><a href="../index.html">Início</a></li>
+            <li><a href="users.html">Utilizadores</a></li>
             <li><a href="product.html">Produtos</a></li>
             <li><a href="order.html">Pedidos</a></li>
             <li><a href="category.html">Categoria</a></li>
-            <li><a href="payment.html">Pagamentos</a></li>
             <li><a href="productCategory.html">Produtos-Categoria</a></li>
             <li><a href="orderItem.html">Pedidos-itens</a></li>
         </ul>
@@ -65,23 +65,23 @@
 </header>
 
 <main>
-    <h1>Users</h1>
+    <h1>Categorias (Exemplo JSON)</h1>
 
-    <h2>JSON</h2>
+    <h2>JSON Bruto Recebido (Simulado):</h2>
     <div id="raw-json-container">
         <p>Carregando JSON...</p>
     </div>
 
     <h2>Dados Formatados em Tabela:</h2>
-    <div id="users-data-container">
+    <div id="category-data-container">
         <p>Carregando dados formatados...</p>
     </div>
 </main>
 
 <footer>
-    <p>&copy;daniel Gil 2025 </p>
+    <p>&copy; 2025 Sua Aplicação</p>
 </footer>
 
-<script src="../_scripts/users-script.js"></script>
+<script src="../_scripts/category-script.js"></script>
 </body>
 </html>
