--- a/src/main/resources/static/db/product.html
+++ b/src/main/resources/static/db/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Utilizadores</title>
+    <title>Product</title>
     <style>
         /* Estilos básicos para o exemplo */
         body {
@@ -54,7 +54,7 @@
     <nav>
         <ul>
             <li><a href="../index.html">Início</a></li>
-            <li><a href="product.html">Produtos</a></li>
+            <li><a href="users.html">Utilizadores</a></li>
             <li><a href="order.html">Pedidos</a></li>
             <li><a href="category.html">Categoria</a></li>
             <li><a href="payment.html">Pagamentos</a></li>
@@ -65,7 +65,7 @@
 </header>
 
 <main>
-    <h1>Users</h1>
+    <h1>Produtos</h1>
 
     <h2>JSON</h2>
     <div id="raw-json-container">
@@ -73,15 +73,15 @@
     </div>
 
     <h2>Dados Formatados em Tabela:</h2>
-    <div id="users-data-container">
+    <div id="product-data-container">
         <p>Carregando dados formatados...</p>
     </div>
 </main>
 
 <footer>
-    <p>&copy;daniel Gil 2025 </p>
+    <p>&copy;Daniel Gil 2025</p>
 </footer>
 
-<script src="../_scripts/users-script.js"></script>
+<script src="../_scripts/product-script.js"></script>
 </body>
 </html>
