--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,11 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="_styles/style.css">
-    <link rel="stylesheet" href="_styles/logo.css">
-    <link rel="stylesheet" href="_styles/hedears.css">
     <link rel="stylesheet" href="_styles/tree.css">
-    <link rel="stylesheet" href="_styles/section.css">
-    <link rel="stylesheet" href="_styles/footer.css">
 
     <title>Daniel Gil</title>
 </head>
@@ -83,12 +79,12 @@
         <h1>Base de Dados</h1>
         <ul>
             <li><a href="db/users.html">Users</a></li>
-            <li><a href="#db">Product</a></li>
-            <li><a href="#portofolio">Order</a></li>
-            <li><a href="#sobre">Category</a></li>
-            <li><a href="#sobre">Payment</a></li>
-            <li><a href="#contacto">Product Category</a></li>
-            <li><a href="#contacto">Order Item</a></li>
+            <li><a href="db/product.html">Product</a></li>
+            <li><a href="db/order.html">Order</a></li>
+            <li><a href="db/category.html">Category</a></li>
+            <li><a href=db/payment.html">Payment</a></li>
+            <li><a href="db/productCategory.html">Product Category</a></li>
+            <li><a href="db/orderItem.html">Order Item</a></li>
         </ul>
     </section>
 
@@ -104,7 +100,7 @@
         </div>
         <ul class="tree">
             <li>
-                <span wm-folder><h1>Java</h1></span>
+                <span  wm-folder><h1>Java</h1></span>
                 <ul style="display: none;">
                     <li><a href="https://github.com/piresgil/DAO-JDBC.git" target="_blank">DAO-JDBC</a></li>
                     <li><a href="https://github.com/piresgil/JPA-Hibernate-Maven-Xampp.git" target="_blank">JPA-Hibernate-Maven-Xampp</a>
