--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -82,7 +82,9 @@
             <li><a href="db/product.html">Product</a></li>
             <li><a href="db/order.html">Order</a></li>
             <li><a href="db/category.html">Category</a></li>
-            <li><a href=db/payment.html">Payment</a></li>
+            <li><a href="db/payment.html">Payment</a></li>
+        </ul>
+        <ul>
             <li><a href="db/productCategory.html">Product Category</a></li>
             <li><a href="db/orderItem.html">Order Item</a></li>
         </ul>
@@ -90,7 +92,7 @@
 
     <section id="portofolio">
         <h1>Portofólio</h1>
-        <div id=descricao-portofolio>
+        <div id="descricao-portofolio">
             <p>Currently, I am working on several Java-based personal projects, including:<br>
                 <br> A Car Rental Management System built with JavaFX and Spring Boot.
                 A Custom Antivirus Application integrating file scanning, hash validation, and external APIs
@@ -100,7 +102,7 @@
         </div>
         <ul class="tree">
             <li>
-                <span  wm-folder><h1>Java</h1></span>
+                <span class="menu-title" wm-folder><h1>Java </h1></span>
                 <ul style="display: none;">
                     <li><a href="https://github.com/piresgil/DAO-JDBC.git" target="_blank">DAO-JDBC</a></li>
                     <li><a href="https://github.com/piresgil/JPA-Hibernate-Maven-Xampp.git" target="_blank">JPA-Hibernate-Maven-Xampp</a>
@@ -110,7 +112,7 @@
                 </ul>
             </li>
             <li>
-                <span wm-folder><h1>Arduino</h1></span>
+                <span class="menu-title" wm-folder><h1>Arduino</h1></span>
                 <ul style="display: none;">
                     <li><a href="https://github.com/piresgil/Arduino-Wii-Nunchuk.git" target="_blank">Arduino-Wii-Nunchuk</a>
                 </ul>
