--- a/src/main/resources/static/db/order.html
+++ b/src/main/resources/static/db/order.html
@@ -6,43 +6,42 @@
 
     <link rel="stylesheet" href="../_styles/db_style.css">
 
-
     <title>Pedidos</title>
 
 </head>
 <body>
 <header>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Início</a></li>
-            <li><a href="users.html">Utilizadores</a></li>
-            <li><a href="product.html">Produtos</a></li>
-            <li><a href="order.html">Pedidos</a></li>
-            <li><a href="category.html">Categoria</a></li>
-            <li><a href="payment.html">Pagamentos</a></li>
-            <li><a href="productCategory.html">Produtos-Categoria</a></li>
-            <li><a href="orderItem.html">Pedidos-itens</a></li>
-        </ul>
-    </nav>
+    <h1>Pedidos</h1>
 </header>
 
 <main>
-    <h1>Pedidos</h1>
-
     <h2>JSON</h2>
     <div id="raw-json-container">
         <p>Carregando JSON...</p>
     </div>
 
     <h2>Dados Formatados em Tabela:</h2>
-    <div id="category-data-container">
+    <div id="order-data-container">
         <p>Carregando dados formatados...</p>
     </div>
+
+    <nav>
+        <ul class="nav-bar">
+            <li><a href="../index.html#db">Início</a></li>
+            <li><a href="users.html">Utilizadores</a></li>
+            <li><a href="product.html">Produtos</a></li>
+            <li><a href="order.html">Pedidos</a></li>
+            <li><a href="category.html">Categoria</a></li>
+        </ul>
+        <ul class="nav-bar">
+            <li><a href="productCategory.html">Produtos-Categoria</a></li>
+            <li><a href="orderItem.html">Pedidos-itens</a></li>
+        </ul>
+    </nav>
 </main>
 
 <footer>
-    <p>&copy;Daniel Gil 2025</p>
-</footer>
+    <p id="footer">&copy;Daniel Gil 2025</p>
 
 <script src="../_scripts/category-script.js"></script>
 </body>
