--- a/src/main/resources/static/db/product.html
+++ b/src/main/resources/static/db/product.html
@@ -3,70 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="../_styles/db_style.css">
+
     <title>Product</title>
-    <style>
-        /* Estilos básicos para o exemplo */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        h1 {
-            color: #2574a9;
-            text-align: center;
-        }
-        #users-data-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            max-width: 800px;
-            margin: 20px auto;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #2574a9;
-            color: white;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        pre {
-            background-color: #eee;
-            padding: 15px;
-            border-radius: 5px;
-            overflow-x: auto; /* Para rolagem horizontal se o JSON for muito largo */
-        }
-    </style>
+
 </head>
 <body>
 <header>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Início</a></li>
-            <li><a href="users.html">Utilizadores</a></li>
-            <li><a href="order.html">Pedidos</a></li>
-            <li><a href="category.html">Categoria</a></li>
-            <li><a href="payment.html">Pagamentos</a></li>
-            <li><a href="productCategory.html">Produtos-Categoria</a></li>
-            <li><a href="orderItem.html">Pedidos-itens</a></li>
-        </ul>
-    </nav>
+    <h1>Produtos</h1>
 </header>
 
 <main>
-    <h1>Produtos</h1>
-
     <h2>JSON</h2>
     <div id="raw-json-container">
         <p>Carregando JSON...</p>
@@ -76,10 +24,23 @@
     <div id="product-data-container">
         <p>Carregando dados formatados...</p>
     </div>
+    <nav>
+        <ul class="nav-bar">
+            <li><a href="../index.html#db">Início</a></li>
+            <li><a href="users.html">Utilizadores</a></li>
+            <li><a href="product.html">Produtos</a></li>
+            <li><a href="order.html">Pedidos</a></li>
+            <li><a href="category.html">Categoria</a></li>
+        </ul>
+        <ul class="nav-bar">
+            <li><a href="productCategory.html">Produtos-Categoria</a></li>
+            <li><a href="orderItem.html">Pedidos-itens</a></li>
+        </ul>
+    </nav>
 </main>
 
 <footer>
-    <p>&copy;Daniel Gil 2025</p>
+    <p id="footer">&copy;Daniel Gil 2025</p>
 </footer>
 
 <script src="../_scripts/product-script.js"></script>
