--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -78,11 +78,11 @@
     <section id="db">
         <h1>Base de Dados</h1>
         <ul>
-            <li><a href="db/users.html">Users</a></li>
-            <li><a href="db/product.html">Product</a></li>
-            <li><a href="db/order.html">Order</a></li>
-            <li><a href="db/category.html">Category</a></li>
-            <li><a href="db/payment.html">Payment</a></li>
+            <li><a href="db/users.html">Utilizadores</a></li>
+            <li><a href="db/product.html">Produtos</a></li>
+            <li><a href="db/order.html">Pedidos</a></li>
+            <li><a href="db/category.html">Categorias</a></li>
+            <li><a href="db/payment.html">Pagamentos</a></li>
         </ul>
         <ul>
             <li><a href="db/productCategory.html">Product Category</a></li>
