--- a/src/main/resources/static/db/order.html
+++ b/src/main/resources/static/db/order.html
@@ -31,7 +31,7 @@
             <li><a href="users.html">Utilizadores</a></li>
             <li><a href="product.html">Produtos</a></li>
             <li><a href="order.html">Pedidos</a></li>
-            <li><a href="category.html">Categoria</a></li>
+            <li><a href="category.html">Categorias</a></li>
         </ul>
         <ul class="nav-bar">
             <li><a href="productCategory.html">Produtos-Categoria</a></li>
@@ -42,7 +42,7 @@
 
 <footer>
     <p id="footer">&copy;Daniel Gil 2025</p>
-
-<script src="../_scripts/category-script.js"></script>
+</footer>
+<script src="../_scripts/order-script.js"></script>
 </body>
 </html>
