--- a/src/main/resources/static/db/orderItem.html
+++ b/src/main/resources/static/db/orderItem.html
@@ -16,7 +16,7 @@
             <li><a href="users.html">Utilizadores</a></li>
             <li><a href="product.html">Produtos</a></li>
             <li><a href="order.html">Pedidos</a></li>
-            <li><a href="category.html">Categoria</a></li>
+            <li><a href="category.html">Categorias</a></li>
             <li><a href="payment.html">Pagamentos</a></li>
             <li><a href="productCategory.html">Produtos-Categoria</a></li>
         </ul>
