--- a/src/main/resources/static/db/category.html
+++ b/src/main/resources/static/db/category.html
@@ -32,7 +32,7 @@
             <li><a href="users.html">Utilizadores</a></li>
             <li><a href="product.html">Produtos</a></li>
             <li><a href="order.html">Pedidos</a></li>
-            <li><a href="category.html">Categoria</a></li>
+            <li><a href="category.html">Pagamentos</a></li>
         </ul>
         <ul class="nav-bar">
             <li><a href="productCategory.html">Produtos-Categoria</a></li>
