--- a/src/main/resources/static/db/users.html
+++ b/src/main/resources/static/db/users.html
@@ -28,10 +28,10 @@
     <nav>
         <ul class="nav-bar">
             <li><a href="../index.html#db">Início</a></li>
-            <li><a href="users.html">Utilizadores</a></li>
             <li><a href="product.html">Produtos</a></li>
             <li><a href="order.html">Pedidos</a></li>
             <li><a href="category.html">Categorias</a></li>
+            <li><a href="category.html">Pagamentos</a></li>
         </ul>
         <ul class="nav-bar">
             <li><a href="productCategory.html">Produtos-Categoria</a></li>
