Revisão de payment, resource, repository, service, ajustes css/HTML

--- a/src/main/resources/static/db/payment.html
+++ b/src/main/resources/static/db/payment.html
@@ -44,6 +44,6 @@
     <p id="footer">&copy;Daniel Gil 2025</p>
 </footer>
 
-<script src="../_scripts/order-script.js"></script>
+<script src="../_scripts/payment-script.js"></script>
 </body>
 </html>
