--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -145,10 +145,10 @@
     </section>
     <section id="contacto">
         <h1>Contacto</h1>
-        <p>ruidanielgil@gmail.com</p><br>
         <p id="descricao-contacto">Java Developer in training | Personal projects with JavaFX & Spring Boot | Open to
             internships and development opportunities</p><br>
         <p>
+            <a href="mailto:ruidanielgil@gmail.com" target="blank">ruidanielgil@gmail.com</a><br><br>
             <a href="https://www.github.com/piresgil" target="blank">GitHub</a> |
             <a href="https://www.linkedin.com/in/rui-daniel-pires-gil" target="blank">Linkedin</a> |
             <a href="https://www.facebook.com/piresgildaniel" target="blank">Facebook</a>
