Ajustes css e HTML

--- a/src/main/resources/static/db/users.html
+++ b/src/main/resources/static/db/users.html
@@ -15,29 +15,30 @@
 </header>
 
 <main>
-
-    <h2>JSON</h2>
-    <div id="raw-json-container">
-        <p>Carregando JSON...</p>
-    </div>
-
     <h2>Dados Formatados em Tabela:</h2>
     <div id="users-data-container">
         <p>Carregando dados formatados...</p>
     </div>
+
     <nav>
         <ul class="nav-bar">
             <li><a href="../index.html#db">Início</a></li>
             <li><a href="product.html">Produtos</a></li>
             <li><a href="order.html">Pedidos</a></li>
             <li><a href="category.html">Categorias</a></li>
-            <li><a href="category.html">Pagamentos</a></li>
+            <li><a href="payment.html">Pagamentos</a></li>
         </ul>
         <ul class="nav-bar">
             <li><a href="productCategory.html">Produtos-Categoria</a></li>
             <li><a href="orderItem.html">Pedidos-itens</a></li>
         </ul>
     </nav>
+
+    <h2>JSON</h2>
+    <div id="raw-json-container">
+        <p>Carregando JSON...</p>
+    </div>
+
 </main>
 
 <footer>
