--- a/src/main/resources/static/db/order.html
+++ b/src/main/resources/static/db/order.html
@@ -15,15 +15,12 @@
 </header>
 
 <main>
-    <h2>JSON</h2>
-    <div id="raw-json-container">
-        <p>Carregando JSON...</p>
-    </div>
 
     <h2>Dados Formatados em Tabela:</h2>
     <div id="order-data-container">
         <p>Carregando dados formatados...</p>
     </div>
+
 
     <nav>
         <ul class="nav-bar">
@@ -31,13 +28,21 @@
             <li><a href="users.html">Utilizadores</a></li>
             <li><a href="product.html">Produtos</a></li>
             <li><a href="category.html">Categorias</a></li>
-            <li><a href="category.html">Pagamentos</a></li>
+            <li><a href="payment.html">Pagamentos</a></li>
         </ul>
         <ul class="nav-bar">
             <li><a href="productCategory.html">Produtos-Categoria</a></li>
             <li><a href="orderItem.html">Pedidos-itens</a></li>
         </ul>
     </nav>
+
+
+    <h2>JSON</h2>
+    <div id="raw-json-container">
+        <p>Carregando JSON...</p>
+    </div>
+
+
 </main>
 
 <footer>
