--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -76,7 +76,7 @@
 
 
     <section id="db">
-        <h1>Base de Dados</h1>
+        <h1>Base de Dados</h1><br>
         <ul>
             <li><a href="db/users.html">Utilizadores</a></li>
             <li><a href="db/product.html">Produtos</a></li>
@@ -91,19 +91,19 @@
     </section>
 
     <section id="portofolio">
-        <h1>Portofólio</h1>
+        <h1>Portofólio</h1><br>
         <div id="descricao-portofolio">
             <p>Currently, I am working on several Java-based personal projects, including:<br>
                 <br> A Car Rental Management System built with JavaFX and Spring Boot.
                 A Custom Antivirus Application integrating file scanning, hash validation, and external APIs
                 A growing suite of tools applying REST APIs, OOP principles, and clean architecture practices.
                 To expand my versatility, I am also exploring front-end web technologies (HTML5, CSS3, JavaScript) and
-                Arduino-based hardware programming.</p>
+                Arduino-based hardware programming.</p><br>
         </div>
         <ul class="tree">
             <li>
-                <span class="menu-title" wm-folder><h1>Java </h1></span>
-                <ul style="display: none;">
+                <span wm-folder><h1>Java</h1></span>
+                <ul  class="sub-menu" style="display: none;">
                     <li><a href="https://github.com/piresgil/DAO-JDBC.git" target="_blank">DAO-JDBC</a></li>
                     <li><a href="https://github.com/piresgil/JPA-Hibernate-Maven-Xampp.git" target="_blank">JPA-Hibernate-Maven-Xampp</a>
                     </li>
@@ -112,7 +112,7 @@
                 </ul>
             </li>
             <li>
-                <span class="menu-title" wm-folder><h1>Arduino</h1></span>
+                <span wm-folder><h1>Arduino</h1></span>
                 <ul style="display: none;">
                     <li><a href="https://github.com/piresgil/Arduino-Wii-Nunchuk.git" target="_blank">Arduino-Wii-Nunchuk</a>
                 </ul>
@@ -122,8 +122,7 @@
 
 
     <section id="sobre">
-        <h1>Sobre</h1>
-
+        <h1>Sobre</h1><br>
         <p id="descricao-sobre">
         <p>I am a dedicated Java developer with a strong focus on building robust, scalable, and user-friendly desktop
             applications. My main expertise lies in Java and its modern ecosystem — including JavaFX for UI development,
